unpackaged/main/default/objects/zkmulti__NaftaCo__c/zkmulti__NaftaCo__c.object-meta.xml
<CustomObject>
    <label>NAFTA CO</label>
    <nameField>
        <displayFormat>NAFTA-CO-{00000000}</displayFormat>
        <label>NAFTA CO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NAFTA COs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>