unpackaged/main/default/objects/zkmulti__NaftaCo__c/fields/zkmulti__BlanketPeriodBeginDate__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__BlanketPeriodBeginDate__c</fullName>
    <label>Blanket Period Begin Date</label>
    <type>Date</type>
</CustomField>