unpackaged/main/default/objects/zkmulti__NaftaCo__c/fields/zkmulti__BlanketPeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__BlanketPeriodEndDate__c</fullName>
    <label>Blanket Period End Date</label>
    <type>Date</type>
</CustomField>