unpackaged/main/default/objects/zkmulti__NaftaCo__c/fields/zkmulti__ProducerAddressStreet__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ProducerAddressStreet__c</fullName>
    <label>Producer Address Street</label>
    <type>TextArea</type>
</CustomField>