unpackaged/main/default/objects/zkmulti__NaftaCo__c/fields/zkmulti__ProducerPhone__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ProducerPhone__c</fullName>
    <label>Producer Phone</label>
    <type>Phone</type>
</CustomField>