unpackaged/main/default/objects/zkmulti__NaftaCo__c/fields/zkmulti__ProducerTaxId__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ProducerTaxId__c</fullName>
    <label>Producer Tax ID</label>
    <length>30</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>