unpackaged/main/default/objects/zkmulti__NaftaCo__c/fields/zkmulti__SignatureContactPhone__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SignatureContactPhone__c</fullName>
    <label>Signature Contact Phone</label>
    <type>Phone</type>
</CustomField>