unpackaged/main/default/objects/zkmulti__NaftaCo__c/fields/zkmulti__SoldToAccount__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SoldToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NAFTA COs</relationshipLabel>
    <relationshipName>NAFTA_COs</relationshipName>
    <type>Lookup</type>
</CustomField>